@@ -123,19 +123,17 @@ public class FunctionQParser extends QParser {
     
     if (sp.opt("$")) {
       String param = sp.getId();
-      sp.pos += param.length();
       String qstr = getParam(param);
       qstr = qstr==null ? "" : qstr;
-      nestedQuery = subQuery(qstr, null).parse();
+      nestedQuery = subQuery(qstr, null).getQuery();
     }
     else {
       int start = sp.pos;
-      int end = sp.pos;
-      String v = sp.val; 
+      String v = sp.val;
   
-      String qs = v.substring(start);
+      String qs = v;
       HashMap nestedLocalParams = new HashMap<String,String>();
-      end = QueryParsing.parseLocalParams(qs, start, nestedLocalParams, getParams());
+      int end = QueryParsing.parseLocalParams(qs, start, nestedLocalParams, getParams());
   
       QParser sub;
   
@@ -143,7 +141,7 @@ public class FunctionQParser extends QParser {
         if (nestedLocalParams.get(QueryParsing.V) != null) {
           // value specified directly in local params... so the end of the
           // query should be the end of the local params.
-          sub = subQuery(qs.substring(0, end), null);
+          sub = subQuery(qs.substring(start, end), null);
         } else {
           // value here is *after* the local params... ask the parser.
           sub = subQuery(qs, null);
